--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -242,6 +242,7 @@
     <Compile Include="General\tb_sis_reporte_x_tb_empresa_Bus.cs" />
     <Compile Include="General\tb_sucursal_Bus.cs" />
     <Compile Include="General\tb_sucursal_FormaPago_x_fa_NivelDescuento_Bus.cs" />
+    <Compile Include="General\tb_TarjetaCredito_Bus.cs" />
     <Compile Include="General\tb_transportista_Bus.cs" />
     <Compile Include="General\tb_visor_video_Bus.cs" />
     <Compile Include="Helps\FilesHelper_Bus.cs" />
