--- a/ERP/Core.Erp.Web/Web.config
+++ b/ERP/Core.Erp.Web/Web.config
@@ -1,4 +1,5 @@
-﻿<?xml version="1.0"?><!--
+﻿<?xml version="1.0" encoding="utf-8"?>
+<!--
   Para obtener más información acerca de cómo configurar una aplicación ASP.NET, consulte
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
@@ -16,8 +17,7 @@
   </configSections>
   <connectionStrings>  
     <add name="ConnectionDB" connectionString="data source=fixed.database.windows.net;initial catalog=agricolaytransporte;persist security info=True;user id=administrador;password=admin*2016;" />
-    <add name="Entities_general" connectionString="metadata=res://*/Model_general.csdl|res://*/Model_general.ssdl|res://*/Model_general.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=fixed.database.windows.net
-      ;initial catalog=agricolaytransporte;persist security info=True;user id=administrador;password=admin*2016;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entities_general" connectionString="metadata=res://*/Model_general.csdl|res://*/Model_general.ssdl|res://*/Model_general.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=fixed.database.windows.net       ;initial catalog=agricolaytransporte;persist security info=True;user id=administrador;password=admin*2016;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="Entities_activo_fijo" connectionString="metadata=res://*/Model_activo_fijo.csdl|res://*/Model_activo_fijo.ssdl|res://*/Model_activo_fijo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=fixed.database.windows.net;initial catalog=agricolaytransporte;persist security info=True;user id=administrador;password=admin*2016;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="Entities_banco" connectionString="metadata=res://*/Model_banco.csdl|res://*/Model_banco.ssdl|res://*/Model_banco.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=fixed.database.windows.net;initial catalog=agricolaytransporte;persist security info=True;user id=administrador;password=admin*2016;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="Entities_caja" connectionString="metadata=res://*/Model_caja.csdl|res://*/Model_caja.ssdl|res://*/Model_caja.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=fixed.database.windows.net;initial catalog=agricolaytransporte;persist security info=True;user id=administrador;password=admin*2016;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
