--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1866,6 +1866,7 @@
     <Compile Include="Reportes\Contabilidad\CONTA_013_Data.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_011_Data.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_012_Data.cs" />
+    <Compile Include="Reportes\Contabilidad\CONTA_014_Data.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_Data.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_diario_Data.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_002_Data.cs" />
