--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -2015,6 +2015,9 @@
     <Compile Include="ro_area_x_departamento.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
+    <Compile Include="ro_biometrico.cs">
+      <DependentUpon>Model_rrhh.tt</DependentUpon>
+    </Compile>
     <Compile Include="ro_Capacitaciones_x_Empleado.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
@@ -2242,6 +2245,7 @@
     <Compile Include="RRHH\ro_archivos_bancos_generacion_x_empleado_Data.cs" />
     <Compile Include="RRHH\ro_area_Data.cs" />
     <Compile Include="RRHH\ro_area_x_departamento_Data.cs" />
+    <Compile Include="RRHH\ro_biometrico_Data.cs" />
     <Compile Include="RRHH\ro_Capacitaciones_x_Empleado_Data.cs" />
     <Compile Include="RRHH\ro_cargaFamiliar_Data.cs" />
     <Compile Include="RRHH\ro_cargo_Data.cs" />
