--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -471,6 +471,7 @@
     <Compile Include="RRHH\ro_archivos_bancos_generacion_x_empleado_Bus.cs" />
     <Compile Include="RRHH\ro_area_Bus.cs" />
     <Compile Include="RRHH\ro_area_x_departamento_Bus.cs" />
+    <Compile Include="RRHH\ro_biometrico_Bus.cs" />
     <Compile Include="RRHH\ro_Capacitaciones_x_Empleado_Bus.cs" />
     <Compile Include="RRHH\ro_cargaFamiliar_Bus.cs" />
     <Compile Include="RRHH\ro_cargo_Bus.cs" />
