--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -334,6 +334,8 @@
     <Compile Include="Reportes\Contabilidad\CONTA_008_Bus.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_011_Bus.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_012_Bus.cs" />
+    <Compile Include="Reportes\Contabilidad\CONTA_016_Bus.cs" />
+    <Compile Include="Reportes\Contabilidad\CONTA_015_Bus.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_014_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_diario_Bus.cs" />
