--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -529,6 +529,11 @@
     <Compile Include="Helps\SessionTimeoutAttribute.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\ActivoFijo\ACTF_001_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -840,6 +845,18 @@
     </Compile>
     <Compile Include="Reportes\Contabilidad\CONTA_013_Rpt.Designer.cs">
       <DependentUpon>CONTA_013_Rpt.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reportes\Contabilidad\CONTA_016_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Contabilidad\CONTA_016_Rpt.Designer.cs">
+      <DependentUpon>CONTA_016_Rpt.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reportes\Contabilidad\CONTA_015_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Contabilidad\CONTA_015_Rpt.Designer.cs">
+      <DependentUpon>CONTA_015_Rpt.cs</DependentUpon>
     </Compile>
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_diario_Rpt.cs">
       <SubType>Component</SubType>
@@ -10675,6 +10692,8 @@
     <Content Include="Areas\RRHH\Views\Biometrico\Modificar.cshtml" />
     <Content Include="Areas\RRHH\Views\Biometrico\Nuevo.cshtml" />
     <Content Include="Areas\RRHH\Views\Biometrico\_GridViewPartial_biometrico.cshtml" />
+    <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_015.cshtml" />
+    <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_016.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Properties\PublishProfiles\PUBLICACION.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -10796,6 +10815,10 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\licenses.licx" />
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reportes\ActivoFijo\ACTF_001_Rpt.resx">
       <DependentUpon>ACTF_001_Rpt.cs</DependentUpon>
     </EmbeddedResource>
@@ -10951,6 +10974,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Contabilidad\CONTA_013_Rpt.resx">
       <DependentUpon>CONTA_013_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Contabilidad\CONTA_016_Rpt.resx">
+      <DependentUpon>CONTA_016_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Contabilidad\CONTA_015_Rpt.resx">
+      <DependentUpon>CONTA_015_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\CuentasPorCobrar\CXC_001_diario_Rpt.resx">
       <DependentUpon>CXC_001_diario_Rpt.cs</DependentUpon>
