--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -577,6 +577,7 @@
     <Compile Include="RRHH\ro_SancionesPorMarcaciones_Info.cs" />
     <Compile Include="RRHH\ro_SancionesPorMarcaciones_x_novedad_Info.cs" />
     <Compile Include="RRHH\ro_Solicitud_Vacaciones_x_empleado_Info.cs" />
+    <Compile Include="RRHH\ro_Solicitud_Vacaciones_x_empleado_x_historico_vacaciones_x_empleado_Info.cs" />
     <Compile Include="RRHH\ro_tabla_Impu_Renta_Info.cs" />
     <Compile Include="RRHH\ro_tipo_gastos_personales_Info.cs" />
     <Compile Include="RRHH\ro_tipo_gastos_personales_maxim_x_anio_Info.cs" />
