--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -465,6 +465,7 @@
     <Compile Include="Areas\RRHH\Controllers\AreaController.cs" />
     <Compile Include="Areas\RRHH\Controllers\BaseImpuestoRentaController.cs" />
     <Compile Include="Areas\RRHH\Controllers\BiometricoController.cs" />
+    <Compile Include="Areas\RRHH\Controllers\CanastaBasicaController.cs" />
     <Compile Include="Areas\RRHH\Controllers\CargaFamiliarController.cs" />
     <Compile Include="Areas\RRHH\Controllers\CargoController.cs" />
     <Compile Include="Areas\RRHH\Controllers\CatalogoRRHHController.cs" />
@@ -10704,6 +10705,10 @@
     <Content Include="Areas\RRHH\Views\Empleado\_GridViewPartial_empleado_jefes_inmediatos.cshtml" />
     <Content Include="Areas\RRHH\Views\Vacaciones\_GridViewPartial_vacaciones_periodos.cshtml" />
     <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_003 - Copia.cshtml" />
+    <Content Include="Areas\RRHH\Views\CanastaBasica\_GridViewPartial_cargo.cshtml" />
+    <Content Include="Areas\RRHH\Views\CanastaBasica\Index.cshtml" />
+    <Content Include="Areas\RRHH\Views\CanastaBasica\Modificar.cshtml" />
+    <Content Include="Areas\RRHH\Views\CanastaBasica\Nuevo.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Properties\PublishProfiles\PUBLICACION.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
