--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -510,6 +510,7 @@
     <Compile Include="RRHH\ro_area_Info.cs" />
     <Compile Include="RRHH\ro_area_x_departamento_Info.cs" />
     <Compile Include="RRHH\ro_biometrico_Info.cs" />
+    <Compile Include="RRHH\ro_canasta_basica_Info.cs" />
     <Compile Include="RRHH\ro_Capacitaciones_x_Empleado_Info.cs" />
     <Compile Include="RRHH\ro_cargaFamiliar_Info.cs" />
     <Compile Include="RRHH\ro_cargo_Info.cs" />
