--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10705,7 +10705,7 @@
     <Content Include="Areas\RRHH\Views\Empleado\_GridViewPartial_empleado_jefes_inmediatos.cshtml" />
     <Content Include="Areas\RRHH\Views\Vacaciones\_GridViewPartial_vacaciones_periodos.cshtml" />
     <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_003 - Copia.cshtml" />
-    <Content Include="Areas\RRHH\Views\CanastaBasica\_GridViewPartial_cargo.cshtml" />
+    <Content Include="Areas\RRHH\Views\CanastaBasica\_GridViewPartial_canasta_basica.cshtml" />
     <Content Include="Areas\RRHH\Views\CanastaBasica\Index.cshtml" />
     <Content Include="Areas\RRHH\Views\CanastaBasica\Modificar.cshtml" />
     <Content Include="Areas\RRHH\Views\CanastaBasica\Nuevo.cshtml" />
